--- a/index.html
+++ b/index.html
@@ -4477,13 +4477,17 @@
             &nbsp;&nbsp;&#125; <br />
             &#125;); <br />
           </p>
-
-          <p>
-            В этом примере <code>fullName</code> как <code>computed</code> будет
-            пересчитан только при изменении <code>firstName</code> или
-            <code>lastName</code>, а <code>getFullName()</code> будет
-            выполняться при каждом вызове.
-          </p>
+          <p>Ключевая разница</p>
+          <ul>
+            <li>
+              Метод вызывается заново КАЖДЫЙ раз, когда компонент
+              перерендеривается (каждый ре-рендер шаблона).
+            </li>
+            <li>
+              Computed запоминает (кэширует) результат и пересчитывается только
+              тогда, когда изменились его зависимости
+            </li>
+          </ul>
         </div>
 
         <div class="subtopic">
@@ -5912,13 +5916,12 @@
             В Vue 3 каждый кусок реактивных данных (ref, reactive‑объект) может
             использоваться в разных вычислениях и компонентах — эти вычисления
             называют <strong>эффектами</strong> (effects): рендер компонента,
-            computed, watchEffect и т.п. [web:98][web:99][web:105]
+            computed, watchEffect и т.п.
           </p>
           <p>
             При первом выполнении эффекта Vue запоминает, какие реактивные
             свойства были прочитаны, а при их изменении система знает, какие
             эффекты нужно пересчитать и какие компоненты перерисовать.
-            [web:98][web:103][web:105]
           </p>
         </div>
 
@@ -5928,14 +5931,13 @@
             В Vue 3 объекты делают реактивными с помощью <strong>Proxy</strong>:
             вместо оригинального объекта используется прокси‑обёртка, которая
             перехватывает операции чтения (<code>get</code>) и записи
-            (<code>set</code>). [web:98][web:99][web:104]
+            (<code>set</code>).
           </p>
           <p>
             Внутри перехватчика <code>get</code> вызывается функция
             <code>track(...)</code> для регистрации зависимости, а в
             перехватчике <code>set</code> — <code>trigger(...)</code> для
             оповещения подписчиков, что значение изменилось.
-            [web:98][web:100][web:101]
           </p>
 
           <p class="code--block" data-lang="JS">
@@ -6684,13 +6686,12 @@
             При <strong>CSR</strong> сервер отдаёт почти пустой HTML (обычно
             только корневой <code>&lt;div id="app"&gt;</code>) и большой
             JS‑бандл; весь реальный HTML строится уже в браузере после загрузки
-            и выполнения JavaScript. [web:137][web:140][web:144]
+            и выполнения JavaScript.
           </p>
           <p>
             Такой подход типичен для SPA: первый экран может загружаться
             медленнее, но приложение очень интерактивно, а переходы между
             страницами быстрые, потому что всё происходит на клиенте.
-            [web:139][web:140][web:144]
           </p>
 
           <p class="code--block" data-lang="HTML">
@@ -6712,13 +6713,12 @@
             При <strong>SSG</strong> HTML‑страницы генерируются
             <em>заранее</em> на этапе сборки проекта (build time): для каждого
             маршрута фреймворк создаёт готовый статический HTML, который потом
-            просто отдаётся как файлы. [web:137][web:139][web:141][web:144]
+            просто отдаётся как файлы.
           </p>
           <p>
             Это даёт очень быстрый первый ответ от сервера и хорошее SEO, так
             как страница уже содержит контент; динамика и интерактивность
             добавляются поверх через JS (часто тоже через гидрацию).
-            [web:137][web:139][web:141]
           </p>
 
           <p class="code--block" data-lang="HTML">
@@ -6744,13 +6744,12 @@
             При <strong>SSR</strong> HTML‑страница генерируется на сервере
             <em>на каждый запрос</em>: при заходе пользователя фреймворк
             запускает рендер компонента на сервере и возвращает уже заполненный
-            HTML. [web:137][web:139][web:140][web:144]
+            HTML.
           </p>
           <p>
             Это даёт быстрый первый отрисованный экран и хорошее SEO для
             динамического контента; после загрузки фронтенд‑JS «подхватывает»
             этот HTML и делает его интерактивным через гидрацию.
-            [web:139][web:140][web:146]
           </p>
 
           <p class="code--block" data-lang="HTML">
@@ -6773,13 +6772,11 @@
             интерактивным: фреймворк заново запускает приложение на клиенте,
             сопоставляет виртуальное дерево с текущим DOM и «пришивает»
             обработчики событий и состояние.
-            [web:142][web:143][web:145][web:146]
           </p>
           <p>
             Проще: сервер отдал готовую, но «мёртвую» HTML‑страницу, а гидрация
             — это этап, когда клиентский JS восстанавливает логику: клики,
             формы, реактивность, маршрутизацию и т.п.
-            [web:142][web:145][web:146]
           </p>
 
           <p class="code--block" data-lang="JS">
@@ -6797,7 +6794,7 @@
             Считается, что при классической гидрации страница как бы
             «отправляется дважды»: сначала как HTML, а потом как JS‑код, который
             ещё раз проходит по компонентам, чтобы восстановить состояние и
-            обработчики. [web:142][web:145]
+            обработчики.
           </p>
         </div>
 
@@ -6861,6 +6858,64 @@
           предложений, описывающих основную тему...&lt;/p&gt;<br />
           &lt;/article&gt;
         </p>
+
+        <div class="subtopic">
+          <h3>БЭМ. Какие элементы внешней геометрии переносим</h3>
+          <table>
+            <thead>
+              <tr>
+                <th>Свойство (убираем из блока)</th>
+                <th>Куда переносим (родитель)</th>
+                <th>Пример</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>margin</td>
+                <td>Элемент родителя</td>
+                <td><code>.header__nav { margin-bottom: 20px; }</code></td>
+              </tr>
+              <tr>
+                <td>margin-top / margin-right / margin-bottom / margin-left</td>
+                <td>Элемент родителя</td>
+                <td><code>.sidebar__menu { margin-left: 30px; }</code></td>
+              </tr>
+              <tr>
+                <td>position: relative (для выравнивания блока снаружи)</td>
+                <td>Элемент родителя</td>
+                <td>
+                  <code
+                    >.container__card { position: relative; top: 10px; }</code
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>float</td>
+                <td>Элемент родителя</td>
+                <td><code>.row__col { float: left; width: 50%; }</code></td>
+              </tr>
+              <tr>
+                <td>position: absolute (внешнее позиционирование)</td>
+                <td>Элемент родителя</td>
+                <td>
+                  <code>.hero__popup { position: absolute; top: 100px; }</code>
+                </td>
+              </tr>
+              <tr>
+                <td>top / right / bottom / left (внешние)</td>
+                <td>Элемент родителя</td>
+                <td>
+                  <code>.navbar__logo { position: absolute; left: 20px; }</code>
+                </td>
+              </tr>
+              <tr>
+                <td>z-index (для слоя относительно окружения)</td>
+                <td>Элемент родителя</td>
+                <td><code>.dropdown__menu { z-index: 100; }</code></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </section>
 
